# SDL3_Jumpstart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
cmake/: FindGLEW.cmake
shaders/: CMakeLists.txt  simple_shader.vert
source/: CMakeLists.txt  main.cpp
source/Application/: CMakeLists.txt  Export.h  LVApplication.cpp  LVApplication.h  SDLPGApplication.cpp  SDLPGApplication.h
source/Core/: CMakeLists.txt
source/Core/Logger/: CMakeLists.txt  Export.h  Logger.cpp  Logger.h  LoggerLevel.h  LoggerMessage.cpp  LoggerMessage.h  LoggerSink.cpp  LoggerSink.h
source/Core/Time/: CMakeLists.txt  Clock.cpp  Clock.h  Export.h
source/Core/Utilities/: Assert.h  CMakeLists.txt
source/Core/Utilities/test/: Assert.test.cpp  CMakeLists.txt
source/Render/: CMakeLists.txt  Export.h  RenderPipeline.cpp  RenderPipeline.h
source/SDLSystem/: CMakeLists.txt  Export.h  SDLScopedMutex.h  SDLState.cpp  SDLState.h  SDLWindow.cpp  SDLWindow.h
